--- a/index.html
+++ b/index.html
@@ -76,27 +76,6 @@
 
       map.setOptions({styles:customStyle});
 
-    /*  var myBounds = new google.maps.LatLngBounds(
-          new google.maps.LatLng(-1.291528, -89.764000),
-          new google.maps.LatLng(-1.432079, -89.607101)
-
-        );
-
-      var rectOptions = {
-        strokeColor: "#FF0000",
-        strokeOpacity: 0.8,
-        strokeWeight: 3,
-        fillColor: "#FF0000",
-        fillOpacity: 0.35,
-        map: map,
-        bounds: myBounds
-
-      };
-
-      var myRectangle = new google.maps.Rectangle(rectOptions);*/
-
-
-
       var myMarkerTwo = new google.maps.Marker({
           position: new google.maps.LatLng(-1.374590, -89.672332),
           map: map,
@@ -244,8 +223,8 @@
 					</div>
 					<div class="col-xs-12 col-md-6">
 						<h3>Nesting Colonies</h3>
-						<p>Albatrosses nest on remote islands, usually exposed areas with good approaches from the sea easy. Some species of albatross like to nest under trees, some prefer dense colonies, and other species like widely spaced nests. Most albatrosses will usually return to the colony where they were born to nest.</p>
-						<p>There are a few accessible albatross nesting colonies. If you promise to follow all the rules and not disturb these super cool birds, we will tell you where you can visit to see one.</p>
+						<p>Albatrosses nest on remote islands, usually in exposed areas with good approaches from the sea. Some species of albatross like to nest under trees, some prefer dense colonies, and other species like widely spaced nests. Most albatrosses will usually return to the colony where they were born to nest.</p>
+						<p>There are a few accessible albatross nesting colonies. If you promise to follow all the rules and not disturb these super cool birds, we will tell you where you can go to visit one.</p>
 						<a href="javascript:gotoDun()">New Zealand</a><br>
 			    		<a href="javascript:gotoFal()">Galapagos Islands</a><br>
 					</div>
